--- a/RESTAPIFolder/TollDataRetriever/pom.xml
+++ b/RESTAPIFolder/TollDataRetriever/pom.xml
@@ -24,13 +24,21 @@
 			<version>4.8.2</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>com.sun.jersey</groupId>
-			<artifactId>jersey-server</artifactId>
-			<version>1.8</version>
-		</dependency>
-
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-server</artifactId>
+    <version>1.17.1</version>
+</dependency>
+<dependency>
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-core</artifactId>
+    <version>1.17.1</version>
+</dependency>
+<dependency>
+    <groupId>com.sun.jersey</groupId>
+    <artifactId>jersey-servlet</artifactId>
+    <version>1.17.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
@@ -45,5 +53,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	
 
 </project>
