--- a/RESTAPIFolder/TollDataRetriever/pom.xml
+++ b/RESTAPIFolder/TollDataRetriever/pom.xml
@@ -39,6 +39,16 @@
     <artifactId>jersey-servlet</artifactId>
     <version>1.17.1</version>
 </dependency>
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180130</version>
+</dependency>
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.2</version>
+</dependency>
 	</dependencies>
 
 	<build>
