--- a/RESTAPIFolder/TollDataRetriever/pom.xml
+++ b/RESTAPIFolder/TollDataRetriever/pom.xml
@@ -49,6 +49,12 @@
     <artifactId>gson</artifactId>
     <version>2.8.2</version>
 </dependency>
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>servlet-api</artifactId>
+    <version>3.0-alpha-1</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
 
 	<build>
